@@ -1,5 +1,16 @@
 ChangeLog
 
+20060316
+	-src/dynamical_time.c
+	-src/utility.c
+	-lntest/test.c
+
+	Updated dynamical time constants from US Navy.
+	Fixed bug in interpolation.
+
+	Fix suppilied by HG Zaunick
+	Liam Girdwood
+
 *********** release of 0.12.0
 
 20060215
